# FooBarPong

./: COPYING  Makefile.am  README  configure.ac
doc/: media
src/: Makefile.am  foobarpong.c
